--- a/vscode/code-removal-comments/package.json
+++ b/vscode/code-removal-comments/package.json
@@ -20,14 +20,6 @@
   "main": "./dist/extension.js",
   "author": "Sanithu Jayakody <sanithujayafiverr@gmail.com>",
   "license": "MIT",
-  "repository": {
-    "type": "git",
-    "url": "https://github.com/0-kodiya-0/code-removal-comments.git"
-  },
-  "bugs": {
-    "url": "https://github.com/0-kodiya-0/code-removal-comments/issues"
-  },
-  "homepage": "https://github.com/0-kodiya-0/code-removal-comments#readme",
   "contributes": {
     "commands": [
       {
@@ -289,15 +281,15 @@
     }
   },
   "scripts": {
-    "vscode:prepublish": "npm run package",
-    "compile": "npm run check-types && npm run lint && node esbuild.js",
+    "vscode:prepublish": "pnpm run package",
+    "compile": "pnpm run check-types && pnpm run lint && node esbuild.js",
     "watch": "npm-run-all -p watch:*",
     "watch:esbuild": "node esbuild.js --watch",
     "watch:tsc": "tsc --noEmit --watch --project tsconfig.json",
-    "package": "npm run check-types && npm run lint && node esbuild.js --production",
+    "package": "pnpm run check-types && pnpm run lint && node esbuild.js --production",
     "compile-tests": "tsc -p . --outDir out",
     "watch-tests": "tsc -p . -w --outDir out",
-    "pretest": "npm run compile-tests && npm run compile && npm run lint",
+    "pretest": "pnpm run compile-tests && pnpm run compile && pnpm run lint",
     "check-types": "tsc --noEmit",
     "lint": "eslint src",
     "test": "vscode-test"
