feat: Implement project-setup tool that will provide templates for building project and adding default configuration

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,7 +1,8 @@
 packages:
-  - esbuild/*
-  - vite/*
-  - vscode/*
+  - esbuild/esbuild-plugin-remove-code
+  - vite/vite-plugin-remove-code
+  - vscode/code-removal-comments
+  - npx/webdev-setup
 
 ignoredBuiltDependencies:
   - esbuild
