--- a/package.json
+++ b/package.json
@@ -19,9 +19,6 @@
     "test:esbuild": "pnpm --filter esbuild-plugin-remove-code run test",
     "test:vite": "pnpm --filter vite-plugin-remove-code run test"
   },
-  "devDependencies": {
-    "prettier": "^3.6.2"
-  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/0-kodiya-0/plugins.git"
@@ -34,7 +31,7 @@
     "vscode-extension"
   ],
   "author": "Sanithu Jayakody <sanithujayafiverr@gmail.com>",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/0-kodiya-0/plugins/issues"
   },
@@ -42,5 +39,8 @@
   "engines": {
     "node": ">=23.9.0",
     "pnpm": ">=10.13.1"
+  },
+  "devDependencies": {
+    "prettier": "^3.6.2"
   }
 }
