refactor: Update print message styles and project structure
* Implement separate utilities for printing, file handling, and scripting
* Use **chalk** and **log-symbols** to improve message display
* Create a separate folder for commands, moving each command into an individual file for better readability
* Implement separate types

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -2,7 +2,7 @@ packages:
   - esbuild/esbuild-plugin-remove-code
   - vite/vite-plugin-remove-code
   - vscode/code-removal-comments
-  - npx/webdev-setup
+  - npx/project-setup
 
 ignoredBuiltDependencies:
   - esbuild
