--- a/npx/project-setup/package.json
+++ b/npx/project-setup/package.json
@@ -34,7 +34,10 @@
     "typescript": "^5.9.2"
   },
   "dependencies": {
+    "chalk": "^5.6.2",
     "commander": "^14.0.1",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "log-symbols": "^7.0.1",
+    "ora": "^8.2.0"
   }
 }
